--- a/IDKROGUE/IDKROGUE.csproj
+++ b/IDKROGUE/IDKROGUE.csproj
@@ -35,4 +35,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Scripts\Game\" />
+  </ItemGroup>
 </Project>
